--- a/pages/apply/teams/team-members/team-members.wxml
+++ b/pages/apply/teams/team-members/team-members.wxml
@@ -1,36 +1,27 @@
-<wu-loading id="wu-loading" title="加载中..." />
-<wu-toast id="wu-toast"></wu-toast>
+<wu-navigation id="wu-navigation" title="{{nav.title}}({{content.totalRow}})"
+               transparent="{{nav.transparent}}"
+               model="{{nav.model}}"
+               animation="{{nav.animation}}">
+</wu-navigation>
 
 <view class="container">
-
-  <wu-navigation id="wu-navigation" title="{{nav.title}}({{member.totalRow}})"
-                 transparent="{{nav.transparent}}"
-                 model="{{nav.model}}"
-                 animation="{{nav.animation}}">
-  </wu-navigation>
-
-  <view>
-
-    <view wx:for="{{member.list}}" wx:key="{{index}}" class="tm-single flex between" hover-class="basic-hover" catchtap="goTeamRecordEvent" data-index="{{index}}">
+    <view wx:for="{{content.list}}" wx:key="member_id" class="tm-single flex between" hover-class="basic-hover" catchtap="goTeamRecordEvent" data-index="{{index}}">
       <view class="_l flex">
         <image src="{{item.avatar_url}}" lazy-load mode="aspectFill"/>
         <view>
-          <text>{{item.Label || item.Caption}}</text>
-          <view class="_profile flex" wx:if="{{item.ProfileID !== 0}}">
+          <text>{{item.label || item.caption}}</text>
+          <view class="_profile flex" wx:if="{{item.profile_id !== 0}}">
             <text>关联档案：</text>
-            <text>{{item.ProfileName}}</text>
+            <text>{{item.profile_name}}</text>
           </view>
         </view>
 
       </view>
       <view class="_r flex">
         <text class="font-12 color-999 mr-10">作品数</text>
-        <text>{{item.rCount}}</text>
+        <text>{{item.record_count}}</text>
         <text class="iconfont icon-zuo color-999"></text>
       </view>
     </view>
-
-  </view>
-
 </view>
 
