--- a/pages/apply/teams/team-records/team-records.wxml
+++ b/pages/apply/teams/team-records/team-records.wxml
@@ -1,11 +1,9 @@
-<wu-loading id="wu-loading" title="加载中..." />
-<wu-toast id="wu-toast"></wu-toast>
-<wu-actionsheet id="wu-actionsheet"></wu-actionsheet>
+<wux-actionsheet id="wux-actionsheet"></wux-actionsheet>
 <wxs src="./team-records.wxs" module="moduleTeamRecords" />
 
 <view class="container">
 
-  <wu-navigation id="wu-navigation" title="{{nav.title}}({{record.totalRow}})"
+  <wu-navigation id="wu-navigation" title="{{nav.title}}({{content.totalRow}})"
                  transparent="{{nav.transparent}}"
                  model="{{nav.model}}"
                  animation="{{nav.animation}}">
@@ -23,48 +21,44 @@
           </view>
       </view>
 
-      <view wx:if="{{record.list.length>0}}">
+      <view class="data-single" wx:for="{{content.list}}" wx:key="record_id">
 
-          <view class="data-single" wx:for="{{record.list}}" wx:key="{{index}}">
-
-              <!--区域日期-->
-              <view wx:if="{{index !==0 && !moduleTeamRecords.equalDate(record.list[index-1].AddTime, item.AddTime)}}"
-                    class="data-single-date-box">
-                <rich-text nodes="{{moduleTeamRecords.resolveTime(item.AddTime).date}}"
-                           class="data-single-date"  id="data-nodes{{index}}"></rich-text>
-              </view>
-
-              <view class="_insert">
-                  <view class="data-single-time flex between">
-                      <text class="color-999 font-12">{{moduleTeamRecords.resolveTime(item.AddTime).time}}</text>
-                      <text class="_k event-hover-class color-999" wx:if="{{userID===item.UserID}}" bindtap="delEvent" data-id="{{item.SubmitID}}" data-index="{{index}}">
-                          <text class="iconfont icon-del"></text><text>移除我的作品</text>
-                      </text>
-                  </view>
-                  <view class="data-single-del {{creatorID===item.UserID?'mine':''}}" hover-class="basic-hover" catchtap="goRecordPageEvent" data-index="{{index}}">
-                      <view class="tr-oper">
-                          <text class="_k"><text class="iconfont icon-yinpin"></text></text>
-                      </view>
-                      <view class="flex">
-                          <view class="tr-info flex color-333"><image src="{{item.avatar_url}}" lazy-load mode="aspectFill"></image><text>{{item.Label || userData.Caption}}</text></view>
-                      </view>
-                      <view class="_name">{{item.DataName}}</view>
-                      <view class="_cname color-999">{{item.CourseName}}</view>
-                      <view class="_num color-999">
-                            <text>{{item.likeCount}}个赞</text>
-                            <text>{{item.viewCount}}次浏览</text>
-                      </view>
-                      <view class="_star" wx:if="{{item.blnMark}}">
-                          <text class="iconfont icon-collect-on"></text>
-                      </view>
-                  </view>
-              </view>
-
+          <!--区域日期-->
+          <view wx:if="{{index !==0 && !moduleTeamRecords.equalDate(content.list[index-1].add_time, item.add_time)}}"
+                class="data-single-date-box">
+            <rich-text nodes="{{moduleTeamRecords.resolveTime(item.add_time).date}}"
+                       class="data-single-date"  id="data-nodes{{index}}"></rich-text>
           </view>
-          <view class="nomore" wx:if="{{record.lastPage}}">额，数据到底了</view>
+
+          <view class="_insert">
+              <view class="data-single-time flex between">
+                  <text class="color-999 font-12">{{moduleTeamRecords.resolveTime(item.add_time).time}}</text>
+                  <text class="_k event-hover-class color-999" wx:if="{{userID===item.user_id}}" bindtap="delEvent" data-id="{{item.submit_id}}" data-index="{{index}}">
+                      <text class="iconfont icon-del"></text><text>移除我的作品</text>
+                  </text>
+              </view>
+              <view class="data-single-del {{creatorID===item.user_id?'mine':''}}" hover-class="basic-hover" catchtap="goRecordPageEvent" data-index="{{index}}">
+                  <view class="tr-oper">
+                      <text class="_k"><text class="iconfont icon-yinpin"></text></text>
+                  </view>
+                  <view class="flex">
+                      <view class="tr-info flex color-333"><image src="{{item.avatar_url}}" lazy-load mode="aspectFill"></image><text>{{item.label || userData.caption}}</text></view>
+                  </view>
+                  <view class="_name">{{item.data_name}}</view>
+                  <view class="_cname color-999">{{item.course_name}}</view>
+                  <view class="_num color-999">
+                        <text>{{item.like_count}}个赞</text>
+                        <text>{{item.view_count}}次浏览</text>
+                  </view>
+                  <view class="_star" wx:if="{{item.bln_mark}}">
+                      <text class="iconfont icon-collect-on"></text>
+                  </view>
+              </view>
+          </view>
 
       </view>
-      <view wx:else class="nodate">额，暂时没有作品</view>
+      <view class="nomore" wx:if="{{content.lastPage && content.list.length > 0}}">额，数据到底了</view>
+      <view class="nodate" wx:if="{{content.list.length <= 0}}">额，暂时没有作品</view>
 
   </view>
 
