--- a/pages/apply/course/lesson-videoPlay/lesson-videoPlay.wxml
+++ b/pages/apply/course/lesson-videoPlay/lesson-videoPlay.wxml
@@ -1,25 +1,32 @@
 <import src="/components/wxParse/wxParse.wxml" />
-<wu-navigation id="wu-navigation" title="{{info.lesson_data.data_name}}" backgroundColor="#000" color="white"></wu-navigation>
+<wu-navigation id="wu-navigation"
+               title="{{info.lesson_data.data_name}}"
+               backgroundColor="#000"
+               color="white"></wu-navigation>
 
 <view class="container">
 
   <view class="play-video" id="play-video">
-      <video src="{{resource.data_url}}"   controls="{{videoControls}}"
+      <video src="{{info.lesson_data.data_url}}"
+             controls="{{videoControls}}"
              show-center-play-btn="{{videoShowCenterPlayBtn}}"
              autoplay="{{videoAutoplay}}"
              class="play-video-style"
              id="video-player"
-             data-id="{{info.lesson_data.data_id}}"
-             bindplay="videoPlayEvent"
-             bindended="videoEndEvent"
-             binderror="videoErrEvent">
+             bindplay="__videoPlayEvent"
+             bindended="__videoEndEvent"
+             bindpause="__videoPauseEvent"
+             bindtimeupdate="__videoTimeUpdateEvent"
+             bindwaiting="__videoWaitingEvent"
+             binderror="__videoErrEvent">
             <cover-view class="play-video-control" wx:if="{{!videoControls}}">
               <cover-image class="_img" src="/assets/images/play.png" catchtap="tipEvent"/>
             </cover-view>
       </video>
   </view>
 
-  <scroll-view scroll-y style="height: {{scrollHeight}}"  bindscrolltolower="lessonScollTolowerEvent">
+  <!--list-->
+  <scroll-view scroll-y style="height: {{scrollHeight}}"  bindscrolltolower="lessonScrollToLowerEvent">
 
     <view class="relative">
       <view class="play-operration">
